--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.6.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "react-modal": "^3.8.1",
     "react-redux": "^5.1.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
